# ilqr

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: ilqr.hpp
models/: point_mass_model.cc  point_mass_model.hpp
src/: ilqr.cc
